<resources>
    <string name="app_name">My Cat Collections</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat_breed_name">Cat Breed Name</string>
    <string name="cat_title">Cat Title</string>
    <string name="desc">Lorem asjdak sjhdk jashdkjas hdkjashd kjashdkja shdkjas hdkjas hdkasj</string>
    <string name="origin_title">Origin</string>
    <string name="origin">Egypt</string>
    <string name="weight_title">Weight</string>
    <string name="weight">35</string>
    <string name="lifespan_title">Life Span</string>
    <string name="lifespan">125</string>
    <string name="temperament_title">Temperament</string>
    <string name="temperament">Funny and cute</string>
    <string name="learn_more">Learn More</string>
    <string name="login_title">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_btn_text">Masuk</string>
    <string name="logout_title">Logout</string>
    <string name="image_content_desc">TODO</string>
    <string name="user_name">Putri Ayu N. A.</string>
    <string name="upload_profile_picture">Upload Image</string>
    <string name="profile">Profile</string>
    <string name="blur_image">Blur Image</string>
    <string name="cancel">Cancel</string>
    <string name="radio_level_1">Level 1</string>
    <string name="radio_level_2">Level 2</string>
    <string name="radio_level_3">Level 3</string>
    <string name="trigger_crash">Trigger Crash</string>
</resources>