<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.catdetail.CatDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cat_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/secondary_orange"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cat_breed_name"
            app:layout_constraintDimensionRatio="2:1.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cat_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/cat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/cat_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/cat_image"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/cat_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/desc"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/cat_title"
            app:layout_constraintBottom_toTopOf="@id/desc_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/desc_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cat_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/desc_middle"
            app:layout_constraintBottom_toTopOf="@id/cat_temperament_title">

            <TextView
                android:id="@+id/cat_origin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/origin_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:background="@color/primary_orange"/>

            <TextView
                android:id="@+id/cat_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:text="@string/origin"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/desc_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cat_desc"
            app:layout_constraintStart_toEndOf="@id/desc_left"
            app:layout_constraintBottom_toTopOf="@id/cat_temperament_title">

            <TextView
                android:id="@+id/cat_lifespan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/lifespan_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:background="@color/primary_orange" />

            <TextView
                android:id="@+id/cat_lifespan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/lifespan"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/desc_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cat_desc"
            app:layout_constraintStart_toEndOf="@id/desc_middle"
            app:layout_constraintBottom_toTopOf="@id/cat_temperament_title">

            <TextView
                android:id="@+id/cat_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/weight_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:background="@color/primary_orange" />

            <TextView
                android:id="@+id/cat_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/weight"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/cat_temperament_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:text="@string/temperament_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:background="@color/primary_orange"
            app:layout_constraintTop_toBottomOf="@id/desc_left"
            app:layout_constraintBottom_toTopOf="@id/cat_temperament"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/cat_temperament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/temperament"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintTop_toBottomOf="@id/cat_temperament_title"
            app:layout_constraintBottom_toTopOf="@id/learn_more_btn"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/learn_more_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/learn_more"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            android:letterSpacing="0.3"
            app:layout_constraintTop_toBottomOf="@id/cat_temperament"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>